# doc-bridge

./: .gitignore  DESIGN.md  README.md  pyproject.toml
defaults/: .env.template  system_blacklist.template.yaml
defaults/blacklists/: global.yaml
defaults/prompts/: dataflow_extraction.md  entity_extraction.md  glossary_extraction.md
defaults/prompts/synthesis/: dataflow_synthesis.md  entity_synthesis.md  glossary_synthesis.md
docs/specs/: 2026-04-17-dedup-decision.md  2026-04-17-legacy-doc-conversion-design.md  2026-04-17-output-A1.md  2026-04-17-output-A2.md  2026-04-17-synthesis-dedup-A1-design.md  2026-04-17-synthesis-dedup-A2-design.md  2026-04-17-v2-multirow-design.md
docs/superpowers/plans/: 2026-04-17-add-system-command.md  2026-04-17-legacy-doc-conversion.md
docs/superpowers/specs/: 2026-04-17-add-system-command-design.md
src/doc_bridge/: __init__.py  cli.py
src/doc_bridge/commands/: add_system_cmd.py  atomize_cmd.py  init_cmd.py  prompts_cmd.py  status_cmd.py  synthesize_cmd.py
src/doc_bridge/core/: chunker.py  converter.py  extractor.py  state.py  synthesizer.py
src/doc_bridge/llm/: client.py  logger.py  prompt_loader.py
src/doc_bridge/models/: atom.py  config.py  provenance.py
src/doc_bridge/utils/: frontmatter.py  system_ops.py  token_counter.py  workspace.py
src/doc_bridge/validation/: blacklist.py  cross_check.py  schema.py
tests/: conftest.py
tests/commands/: test_add_system_cmd.py  test_atomize_cmd.py
tests/utils/: test_system_ops.py  test_workspace.py
