[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-bridge"
version = "0.1.0"
description = "Document atomization and synthesis system for technical documentation"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "anthropic>=0.30",
    "markitdown[all]",
    "pydantic>=2.0",
    "python-frontmatter>=1.0",
    "python-dotenv>=1.0",
    "aiofiles>=23.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.scripts]
doc-bridge = "doc_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
